# coretrack

./: .gitignore  db.sqlite3  main.py  makefile  pyproject.toml
core/: settings.py  urls.py
theme/static_src/: package-lock.json
theme/static_src/src/: styles.css
theme/templates/: base.html  field.html  login.html
theme/templatetags/: form_tags.py
theme/utils/: input_fields_utils.py
tracker/: admin.py  forms.py  models.py  urls.py  views.py
tracker/migrations/: 0001_initial.py  0002_alter_tracker_status.py
tracker/templates/: tracker_form.html  tracker_list.html
