[project]
name = "coretrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-autocomplete-light>=3.12.1",
    "django-tailwind[cookiecutter,honcho,reload]>=4.4.2",
    "python-dotenv>=1.2.2",
]
